[gd_scene load_steps=5 format=3 uid="uid://h7lnvvwa1w82"]

[ext_resource type="Script" path="res://Character/Weapons/WeaponsMenu.gd" id="1_rlryj"]
[ext_resource type="PackedScene" uid="uid://jn7wws42pam8" path="res://Character/Weapons/WeaponMenuChoice.tscn" id="2_l68ie"]

[sub_resource type="ButtonGroup" id="ButtonGroup_uk57l"]

[sub_resource type="ButtonGroup" id="ButtonGroup_cjm2g"]

[node name="WeaponsMenu" type="CanvasGroup"]
script = ExtResource("1_rlryj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -85.0
offset_right = 877.0
offset_bottom = 371.0
color = Color(0.807843, 0.72549, 0.996078, 0.584314)

[node name="Projectile" type="Label" parent="."]
offset_left = 456.0
offset_right = 877.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "Projectile"
horizontal_alignment = 1

[node name="Melee" type="Label" parent="."]
offset_left = 1.0
offset_right = 412.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "Melee"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 159.0
offset_top = -70.0
offset_right = 673.0
offset_bottom = 2.0
theme_override_font_sizes/font_size = 50
text = "Choose two weapons"

[node name="Melees" type="VBoxContainer" parent="."]
offset_left = 69.0
offset_top = 48.0
offset_right = 351.0
offset_bottom = 209.0

[node name="FirstMelee" parent="Melees" instance=ExtResource("2_l68ie")]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_uk57l")

[node name="SecondMelee" parent="Melees" instance=ExtResource("2_l68ie")]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_uk57l")

[node name="Projectiles" type="VBoxContainer" parent="."]
offset_left = 520.0
offset_top = 49.0
offset_right = 818.0
offset_bottom = 226.0

[node name="FirstProjectile" parent="Projectiles" instance=ExtResource("2_l68ie")]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_cjm2g")

[node name="Submit" type="Button" parent="."]
offset_left = 291.0
offset_top = 287.0
offset_right = 573.0
offset_bottom = 353.0
text = "Choose"

[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
